--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "scripts": {
         "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
         "start": "npm run dev",
+        "staging": "node build/staging-build.js",
         "build": "node build/build.js"
     },
     "dependencies": {
